# FiPPP

./: .gitattributes  .ninja_deps  .ninja_log  BuildSetup.cmake  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  FiPPP submitted_revised.docx  FiPPP.conf  README.md  build.ninja  cmake_install.cmake
pyplot/src/: Constants.py  count_data.py  igs_stations.csv  load_data.py  main.py  plot.py  plot_conf.py
src/AppFrame/: BasicFramework.hpp  MainAdapter.hpp
src/ClockModel/: ClockModel.hpp  Combinations.hpp  EpochClockModel.hpp  ObsClockModel.cpp  ObsClockModel.hpp  ObsEpochMap.cpp
src/CommandLine/: AboutOptions.cpp  AboutOptions.hpp  ConfigReader.cpp  ConfigReader.hpp
src/EstimateBias/: EstimateBias.c  EstimateBias.h
src/FiPPPSolver/: CMakeLists.txt  FiPPPSolver.cpp  FiPPPSolver.hpp  cmake_install.cmake
src/FileDirProc/: FileSpecFind.cpp  FindFile.cpp  FindFile.hpp
src/FileHandling/: Antenna.cpp  Antenna.hpp  AntexReader.cpp  AntexReader.hpp  BLQDataReader.cpp  BLQDataReader.hpp  BiasDataReader.cpp  BiasDataReader.hpp  EOPDataStore.cpp  EOPDataStore.hpp  FFStream.cpp  FFStream.hpp  IFCBDataReader.cpp  IFCBDataReader.hpp  LeapSecStore.cpp  LeapSecStore.hpp  SolarSystem.cpp  SolarSystem.hpp  UPDDataReader.cpp  UPDDataReader.hpp  XYZStore.cpp  XYZStore.hpp
src/GNSSCore/: CarrierBand.hpp  DeprecatedConsts.hpp  FreqConsts.hpp  GNSSconstants.hpp  GPSEllipsoid.hpp  GeodeticFrames.cpp  GeodeticFrames.hpp  IonoModel.cpp  IonoModel.hpp  NeillTropModel.cpp  Position.cpp  RinexObsID_Generated.cpp  RinexSatID.cpp  SaasTropModel.cpp  SaasTropModel.hpp  SatID.cpp  SatID.hpp  SatMetaDataStore.cpp  SatelliteSystem.cpp  SatelliteSystem.hpp  TropModel.hpp  WGS84Ellipsoid.hpp
src/GNSSEph/: BDSEphemeris.cpp  BDSEphemerisStore.cpp  BDSEphemerisStore.hpp  EngAlmanac.cpp  GPSEphemeris.cpp  GalEphemeris.cpp  GalEphemeris.hpp  GalEphemerisStore.cpp  GalEphemerisStore.hpp  NavID.hpp  OrbElemRinex.cpp  OrbElemStore.cpp  OrbitEph.cpp  OrbitEph.hpp  OrbitEphStore.cpp  OrbitEphStore.hpp  PackedNavBits.cpp  PositionSatStore.cpp  QZSEphemeris.cpp  RationalizeRinexNav.cpp  Rinex3EphemerisStore.cpp  Rinex3EphemerisStore.hpp  SP3EphemerisStore.cpp  XvtStore.hpp
src/Geodynamics/: ASConstant.hpp  ERPTideModel.hpp  EarthOceanTide.cpp  EarthOceanTide.hpp  EarthOrientation.cpp  EarthOrientation.hpp  EarthPoleTide.cpp  EarthPoleTide.hpp  EarthSolidTide.cpp  EarthSolidTide.hpp  EmpiricalForce.cpp  EmpiricalForce.hpp  EquationOfMotion.hpp  ForceModel.hpp  IERSConv2010.cpp  IERSConv2010.hpp  IERSConventions.cpp  IERSConventions.hpp  Integrator.hpp  ReferenceSystem.cpp  ReferenceSystem.hpp  Relativity.cpp  Relativity.hpp
src/Geomatics/: ViennaTropModel.cpp  ViennaTropModel.hpp  XYZ2ENU.cpp  XYZ2ENU.hpp  XYZ2NED.cpp  XYZ2NED.hpp
src/Math/: Legendre.cpp  Legendre.hpp  MathBase.hpp  RACRotation.cpp
src/ProceFrame/: ARBase.hpp  ARLambda.cpp  ARLambda.hpp  AstronomicalFunctions.hpp  ChooseOptimalObs.cpp  ChooseOptimalObs.hpp  CombinationOptions.cpp  CombinationOptions.hpp  ComputeCombination.cpp  ComputeCombination.hpp  ComputeDerivative.cpp  ComputeDerivative.hpp  ComputeElevWeights.cpp  ComputeElevWeights.hpp  ComputeIonoDelay.cpp  ComputeIonoDelay.hpp  ComputeResidual.cpp  ComputeResidual.hpp  ComputeSPP.cpp  ComputeSPP.hpp  ComputeSatAttitude.cpp  ComputeSatAttitude.hpp  ComputeSatPCenter.cpp  ComputeSatPCenter.hpp  ComputeSatPos.cpp  ComputeSatPos.hpp  ComputeStaTides.cpp  ComputeStaTides.hpp  ComputeTropModel.cpp  ComputeTropModel.hpp  ComputeWindUp.cpp  ComputeWindUp.hpp  ConvertObs.cpp  ConvertObs.hpp  CorrectCodeBiases.cpp  (+73 more)
tables/: FES2004.BLQ  IGS_FES2004.BLQ
(+47 files in other folders)
